# flappy.bird.bot

./: .gitignore  README.md  checkverstion.py  config.txt  flappy_bird.py  main.py  pyproject.toml  requirements.txt  test_agent.pth  test_dqn.py  test_pytorch.py
.cursor-free-vip/: config.ini
agent/: dqn_agent.py
game/: flappy_bird.py
src/: flappy_bird.py  test.py  train.py
utils/: visualization.py
weights/: flappy_bird_dqn_100.h5
